# unity-image-encoding

./: .gitignore  .gitmodules  LICENSE  MSVC_Fixes.patch  README.md
BindingsGenerator/: BindingsGenerator.csproj  Program.cs  UnityImageEncodingGeneratorLinux.cs  UnityImageEncodingGeneratorWindows.cs
BindingsGenerator/Bindings/: UnityImageEncoding.cs
ETCEncodingDemo/: ETCEncoder.cs  ETCEncodingDemo.csproj  Program.cs
ETCEncodingDemo/Native/Linux64/: Std.cs  UnityImageEncodingLinux.cs
ETCEncodingDemo/Native/Win64/: Std.cs  UnityImageEncodingWindows.cs
ETCEncodingDemo/Properties/: launchSettings.json
ETCEncodingDemo/images/: LICENCE
UnityImageEncoding.Native/: CMakeLists.txt
UnityImageEncoding.Native/src/: UnityImageEncoders.cpp
UnityImageEncoding.Native/src/include/: ExportAPI.h  FileHeaders.h  UnityImageEncoders.h
UnityImageEncoding.Native/src/lib/: opengl_stub.h
